# qeli

./: .gitattributes  .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSE  LICENSING.md  README.md  SECURITY.md  _config.yml  index.md  install-reality-server.sh  update-qeli-server.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  dco.yml  docker-publish.yml  release-attest.yml
blog/: habr-article.md
conformance/: qeli-links.json
docs/: AUDIT-2026-06-10.md  AUDIT-2026-06-11-external2.md  AUDIT-FIXES-2026-07-05.md  AUDIT.md  BENCHMARK.md  COMPARISON.md  CONFIG.md  DESIGN-remaining.md  DPI-AUDIT.md  KEENETIC-DEPLOY.md  KEENETIC-PORT.md  README.md  REFACTOR-PLAN.md  ROADMAP.md
docs/eng/: AUDIT-2026-06-10.md  AUDIT-2026-06-11-external2.md  AUDIT-2026-06-11.md  AUDIT.md  BENCHMARK.md  COMPARISON.md  CONFIG.md  DESIGN-remaining.md  DPI-AUDIT.md  GETTING-STARTED.md  KEENETIC-DEPLOY.md  KEENETIC-PORT.md  (+10 more)
habr-assets/: _w.html
native-libs/: README.md  SHA256SUMS  verify.sh
qeli/: Cargo.toml  build_deb.sh
qeli-android/: .gitignore  README.md  build.gradle.kts  generate_icons.py  keystore.properties.example  settings.gradle.kts
qeli-ios/: .gitignore  PARITY.md  README.md  build_native.sh  generate_project.sh  project.yml
qeli-mac/: Info.plist.in  README.md  build_app.sh  build_dylib.sh
qeli-openwrt/: INSTALL.md  Makefile  README.md
qeli-win/: README.md
qeli/.cargo/: config.toml
qeli/config/: client-maxobf.conf  client-maxobf.json  client-reality.conf  client.conf  server-maxobf.conf  server-multiprofile.conf  server.conf  users.conf
qeli/config/client/: client1.json  client2.json  client3.json  client4.json  client5.json
qeli/debian/: 49-qeli.rules  Makefile  control  postinst  prerm  qeli.service
qeli/examples/: realtls_probe.rs  replay_probe.rs
qeli/fuzz/: Cargo.toml  README.md
qeli/fuzz/fuzz_targets/: clienthello.rs  obfs_datagram.rs  packet_decrypt.rs  quic.rs  realtls_record.rs  udp_frag.rs
qeli/src/: client_main.rs  hooks.rs  lib.rs  main.rs  trace.rs  util.rs
qeli/src/client/: dns.rs  gateway.rs  killswitch.rs  mod.rs  route.rs
qeli/src/config/: client.rs  format.rs  mod.rs  server.rs  server_ini.rs  share.rs  users.rs
qeli/src/crypto/: auth.rs  cipher.rs  derive.rs  exchange.rs  mlkem.rs  mod.rs  reality.rs  secret.rs
qeli/src/protocol/: mod.rs  obfs.rs  obfuscate.rs  packet.rs  quic.rs  shaper.rs  tls.rs  udp_frag.rs
qeli/src/protocol/realtls/: client.rs  clienthello.rs  ffi.rs  jni.rs  keyschedule.rs  mod.rs  record.rs  registry.rs  sansio.rs  server.rs  stream.rs
qeli/src/server/: acl.rs  client_manager.rs  control.rs  dhcp.rs  dns.rs  handler.rs  metrics.rs  mod.rs  nat.rs  notify.rs  pool.rs  preflight.rs  reality.rs  udp_handler.rs  update.rs  usage.rs  web.rs
qeli/src/transport/: mod.rs  tcp.rs  udp.rs
qeli/src/tun/: iface.rs  mod.rs  tap.rs
qeli/src/web/: assets.rs  auth.rs  mod.rs  tls.rs
qeli/src/web/api/: backup.rs  client.rs  config.rs  control.rs  hash.rs  identity.rs  login.rs  logs.rs  mod.rs  notify.rs  paths.rs  share.rs  status.rs  system.rs  usage.rs  users.rs
qeli/src/web/assets/: app.css  i18n.js
qeli/src/web/pages/: blocked.rs  client.rs  config.rs  dashboard.rs  login.rs  logs.rs  mod.rs  notifications.rs  quickstart.rs  users.rs
qeli/src/web/templates/: blocked.html  client.html  config.html  dashboard.html  layout.html  login.html  logs.html  notifications.html  quickstart.html  users.html
qeli/web-assets/: README.md  input.css  package-lock.json  package.json  tailwind.config.js
release/: ab_0711_vs_0712_2026-07-18.json  ab_071_vs_072_2026-06-20.json  ab_074_vs_079_2026-07-10.json  ab_079_vs_0711_2026-07-12.json  ab_jemalloc.json  benchmark_extra_modes.json  benchmark_results.json  benchmark_results_2026-06-11_emulator.json  benchmark_results_2026-06-11_v0.6.0.json  benchmark_results_2026-06-12_v0.7.1.json  benchmark_results_2026-06-20_v0.7.2.json  benchmark_results_2026-06-28_v0.7.4.json  benchmark_results_2026-07-18_v0.7.12.json  benchmark_results_2026-07-18_v0.7.12_run2.json  benchmark_results_prev_0.7.5.json  benchmark_results_v0.7.5_p3b1_pristine.json  benchmark_results_v0.7.6_jemalloc.json  benchmark_results_v0.7.7_jemalloc.json  checkconfig_gap_0.7.12.json  cliff_after_fix.json  cliff_probe.json  download_bonding_0.7.12.json  features_0.7.12.json  plain_feature_bisect.json  plain_fg_probe.json  reality_tls_5x_2026-06-11.json  reality_tls_5x_v0.7.0_2026-06-12.json  reality_tls_5x_v0.7.10_2026-07-10.json  reality_tls_5x_v0.7.11_2026-07-12.json  reality_tls_5x_v0.7.12_2026-07-18.json  reality_tls_5x_v0.7.12_2026-07-19.json  reality_tls_5x_v0.7.1_2026-06-12.json  reality_tls_5x_v0.7.2_2026-06-20.json  reality_tls_5x_v0.7.4_2026-06-28.json  reality_tls_5x_v0.7.5_p3b1.json  reality_tls_5x_v0.7.6.json  reality_tls_5x_v0.7.6_glibc_today.json  reality_tls_5x_v0.7.6_jemalloc.json  reality_tls_5x_v0.7.6jem_today.json  reality_tls_5x_v0.7.7_aead010_revert.json  (+4 more)
scripts/: ab_0711_0712.py  ab_071_072.py  ab_074_079.py  ab_079_0711.py  ab_focus_download.py  add-client.sh  add-dpd-config.py  add-hash-command-v2.py  add-hash-command.py  amnezia_obfs_e2e.py  android_inject_profiles.py  android_obfsawg_diag.py  android_obfsawg_test.py  android_obfsawg_verify.py  android_ui.py  apply-patches.py  bench_bonding.py  bench_stealth.py  benchmark.py  build_and_deploy.py  build_android_so_11.py  build_keenetic.py  build_mac_dist_resign.py  build_mac_universal.py  build_native_libs_p4.py  build_so_aes.py  build_so_p3.py  capture-handshake.py  check_docs.py  ci-check.sh  clean-build.py  clean-rebuild-client.py  cleanup_client11.py  cleanup_server10.py  client-config.json  config_functest.py  create-multi-interface-config.py  create-multi-interface-server.py  deploy-and-build-final.py  deploy-and-build.py  (+144 more)
test/: auto_test.py  benchmark-all.sh  benchmark-final.py  benchmark-vpn-v2.py  benchmark-vpn.py  benchmark_final.py  benchmark_results.json  collect-results.sh  run_tests.py  test-connectivity.py  test-handshake.py  test-nc.py  test-rust-client.py  test-tunnel.py  vpn-benchmark.sh
(+308 files in other folders)
