[package]
name = "qeli"
version = "0.5.6"
edition = "2021"
description = "Quick Easy Link IP"
authors = ["qeli"]

[lib]
name = "qeli"
path = "src/lib.rs"
# rlib for the binary/tests; cdylib/staticlib for the realtls FFI on Android/Windows.
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "signal", "sync", "macros", "process"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
chacha20 = "0.9"
aes-gcm = "0.10"
# Pure-Rust ML-KEM-768 (FIPS 203) for the X25519MLKEM768 post-quantum key share
# in the ClientHello — fingerprint parity with current Chrome. No C deps (unlike
# aws-lc-rs), so it cross-compiles to the Android/Windows/macOS FFI clients.
# `getrandom` enables `generate_keypair()` (OS RNG) — no rand_core version coupling.
ml-kem = { version = "0.3", features = ["getrandom"] }
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.13"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "1"
bytes = "1"
libc = "0.2"
mio = { version = "1", features = ["os-poll", "os-ext"] }
# SO_REUSEPORT UDP sockets for the multi-worker UDP data plane (safe sockaddr
# handling vs hand-rolled libc). Already in the dep tree via tokio/mio.
socket2 = { version = "0.5", features = ["all"] }

axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
base64 = "0.22"
# Pure-Rust QR generation for the web UI share/QR feature (SVG output, no JS/CDN).
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

# Real TLS 1.3 server-side termination for REALITY (M3). `ring` provider only
# (the lab has no cmake for aws-lc-rs). The client side is hand-rolled (no rustls).
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rcgen = { version = "0.13", default-features = false, features = ["ring"] }

[target.'cfg(target_os = "android")'.dependencies]
# JNI bridge for the Android client (A4). Host/Windows use the plain C ABI (ffi.rs).
jni = { version = "0.21", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"