[package]
name = "qeli"
version = "0.7.6"
edition = "2021"
description = "Quick Easy Link IP"
authors = ["qeli"]

[lib]
name = "qeli"
path = "src/lib.rs"
# rlib for the binary/tests; cdylib/staticlib for the realtls FFI on Android/Windows.
crate-type = ["rlib", "cdylib", "staticlib"]

# Full daemon (server + web + realtls termination + CLI). The default; what the
# server, CI, and the Android/Win/Mac FFI cdylib have always built.
[[bin]]
name = "qeli"
path = "src/main.rs"
required-features = ["server", "client"]

# Standalone client binary for routers (Keenetic / Entware). Built ONLY under the
# off-by-default `client-bin` feature, so normal builds never compile it — keeping
# server/CI/FFI builds byte-identical to before. See docs/KEENETIC-PORT.md.
# NB: lives at src/client_main.rs (NOT src/bin/) because .gitignore's `**/bin/`
# would otherwise exclude it from git/CI.
[[bin]]
name = "qeli-client"
path = "src/client_main.rs"
required-features = ["client-bin"]

[features]
default = ["server", "client"]
# Server side pulls the only MIPS-incompatible deps (rustls/ring via rcgen) plus
# the web stack. A client-only build (`--no-default-features --features client-bin`)
# excludes all of these and cross-compiles to mipsel/aarch64.
server = ["dep:rustls", "dep:tokio-rustls", "dep:webpki-roots", "dep:rcgen", "dep:axum", "dep:axum-server", "dep:tower", "dep:qrcode", "dep:rustls-pemfile", "dep:ipnet"]
client = []
client-bin = ["client"]
# Swap the server binary's global allocator to jemalloc. Opt-in + OFF by default:
# only the Linux server/deb release build enables it (`--features jemalloc`). The
# cross-platform FFI cdylib (Win/Mac/Android) and the MIPS/musl router client never
# turn it on, so `tikv-jemalloc-sys` (no Windows backend, finicky on musl) is never
# compiled for them. See docs on the glibc arena-retention RSS plateau.
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "signal", "sync", "macros", "process"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.11"
chacha20 = "0.10"
# `zeroize` feature wipes the AES key schedule on Drop (H-5) — parity with
# chacha20poly1305, which zeroizes by default.
aes-gcm = { version = "0.11", features = ["zeroize"] }
# Pure-Rust ML-KEM-768 (FIPS 203) for the X25519MLKEM768 post-quantum key share
# in the ClientHello — fingerprint parity with current Chrome. No C deps (unlike
# aws-lc-rs), so it cross-compiles to the Android/Windows/macOS FFI clients.
# `getrandom` enables `generate_keypair()` (OS RNG) — no rand_core version coupling.
ml-kem = { version = "0.3", features = ["getrandom"] }
sha2 = "0.11"
hkdf = "0.13"
hmac = "0.13"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
bytes = "1"
libc = "0.2"
# Drop-in AtomicU64 etc. that work on 32-bit targets without native 64-bit atomics
# (mipsel Keenetic routers). Maps to native instructions on aarch64/x86_64 — zero
# cost there; lock-based fallback only where the target lacks the instruction.
portable-atomic = "1"
# jemalloc as the server binary's global allocator (behind the off-by-default
# `jemalloc` feature). glibc retains freed arenas → the worker RSS plateaus ~180 MB
# under handshake churn; jemalloc fragments far less and returns pages to the OS via
# decay, keeping RSS bounded (~40-60 MB). Optional so non-server targets never build
# jemalloc-sys (no Windows/MSVC backend). Linux-only in practice (the binary is too).
tikv-jemallocator = { version = "0.6", optional = true }
mio = { version = "1", features = ["os-poll", "os-ext"] }
# SO_REUSEPORT UDP sockets for the multi-worker UDP data plane (safe sockaddr
# handling vs hand-rolled libc). Already in the dep tree via tokio/mio.
socket2 = { version = "0.6", features = ["all"] }

# Web admin stack — server-only (feature = "server"). `ring` (pulled via rcgen/
# rustls below) has no MIPS backend, so these stay out of the client-only build.
axum = { version = "0.8", features = ["macros"], optional = true }
# HTTPS for the panel on a public bind. `tls-rustls-no-provider` (NOT `tls-rustls`)
# so it does NOT pull aws-lc-rs (needs cmake — the lab has none); we supply the
# `ring` provider ourselves via the existing rustls `ring` feature.
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"], optional = true }
tower = { version = "0.5", optional = true }
# Load PEM cert/key (operator-provided or persisted self-signed) for the panel TLS.
rustls-pemfile = { version = "2", optional = true }
# Source-IP allowlist for the panel (CIDR contains-check).
ipnet = { version = "2", optional = true }
base64 = "0.22"
# Pure-Rust QR generation for the web UI share/QR feature (SVG output, no JS/CDN).
qrcode = { version = "0.14", default-features = false, features = ["svg"], optional = true }

# Real TLS 1.3 server-side termination for REALITY (M3). `ring` provider only
# (the lab has no cmake for aws-lc-rs). The client side is hand-rolled (no rustls),
# so these are server-only (feature = "server") — `ring` is the lone MIPS blocker
# and it lives entirely behind this gate.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"], optional = true }
# Mozilla root bundle for verifying outbound TLS (Telegram API / webhook notify).
# Data-only crate; server-side (notifications) only.
webpki-roots = { version = "0.26", optional = true }
rcgen = { version = "0.14", default-features = false, features = ["ring", "pem"], optional = true }

[dev-dependencies]
# ServiceExt::oneshot for driving real requests through a Router in tests (tower's
# default feature set omits `util`). Test-only — never in the release binary.
tower = { version = "0.5", features = ["util"] }

[target.'cfg(target_os = "android")'.dependencies]
# JNI bridge for the Android client (A4). Host/Windows use the plain C ABI (ffi.rs).
jni = { version = "0.21", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"